--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -6,3 +6,7 @@
      file:
        path: ~/demo_directory_created_through_awx
        state: directory
+   - name: Delete directory
+     file:
+       path: ~/demo_directory_created_through_awx
+       state: absent
