--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -6,10 +6,10 @@
      file:
        path: ~/demo_directory_created_through_awx
        state: directory
-   - name: Copy local file /root/get-pip.py in remote dir /demo_directory_created_through_awx
+   - name: Copy local file /root/get-pip.py in remote dir /root/demo_directory_created_through_awx
      copy:
        src: /root/get-pip.py
-       dest: //demo_directory_created_through_awx/get-pip.py
+       dest: ~/demo_directory_created_through_awx/get-pip.py
        mode: u+rw,g-wx,o-rwx
 ###   - name: Delete directory
 ###     file:
