--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -9,7 +9,7 @@
    - name: Copy local file /root/get-pip.py in remote dir /root/demo_directory_created_through_awx
      copy:
        src: /root/prova.sh
-       dest: ~/demo_directory_created_through_awx/get-pip.py
+       dest: ~/demo_directory_created_through_awx/prova.sh
        mode: u+rw,g-wx,o-rwx
 ###   - name: Delete directory
 ###     file:
