--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -7,6 +7,7 @@
        path: ~/demo_directory_created_through_awx
        state: directory
    - name: Copy local file /root/get-pip.py in remote dir /root/demo_directory_created_through_awx
+     command: pwd
      copy:
        src: /tmp/prova.sh
        dest: ~/demo_directory_created_through_awx/prova.sh
