--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -8,7 +8,7 @@
        state: directory
    - name: Copy local file /root/get-pip.py in remote dir /root/demo_directory_created_through_awx
      copy:
-       src: /tmp/prova.sh
+       src: ~/tmp/prova.sh
        dest: ~/demo_directory_created_through_awx/prova.sh
        owner: root
        group: root       
