--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -1,7 +1,7 @@
 - name: create_directory
   hosts: all
   tasks:
-   - command: "ls -lah /opt/stack/tempest"
+   - command: "ls -lah /tmp/"
      register: dir_out
 
    - debug: var={{item}}
