--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -12,9 +12,9 @@
        path: ~/demo_directory_created_through_awx
        state: directory
        
-   - name: Copy local file /tmp/prova.txt in remote dir /root/demo_directory_created_through_awx
+   - name: Copy local file to dir /root/demo_directory_created_through_awx
      copy:
-       src: ~/tmp/prova.txt
+       src: ~/tmp/mcxptt_deploy_20f25_1145_ldo.tgz
        dest: ~/demo_directory_created_through_awx/prova.sh
        remote_src: no
        
