--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -15,8 +15,7 @@
    - name: Copy local file to dir /root/demo_directory_created_through_awx
      copy:
        src: /tmp/mcxptt_deploy_20f25_1145_ldo.tgz
-       dest: ~/demo_directory_created_through_awx/prova.sh
-       remote_src: no
+       dest: ~/demo_directory_created_through_awx
        
 ###   - name: Delete directory
 ###     file:
