--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -16,6 +16,7 @@
      copy:
        src: /tmp/mcxptt_deploy_20f25_1145_ldo.tgz
        dest: ~/demo_directory_created_through_awx
+       remote_src: yes
        
 ###   - name: Delete directory
 ###     file:
