--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -1,6 +1,6 @@
 - name: create_directory
   hosts: all
-  tasks:
+  tasks: read the content of directory /tmp/ on theremote host 
    - command: "ls -lah /tmp/"
      register: dir_out
 
@@ -12,7 +12,7 @@
        path: ~/demo_directory_created_through_awx
        state: directory
        
-   - name: Copy local file to dir /root/demo_directory_created_through_awx
+   - name: Copy in remote host file from /tmp/ to dir /root/demo_directory_created_through_awx
      copy:
        src: /tmp/mcxptt_deploy_20f25_1145_ldo.tgz
        dest: ~/demo_directory_created_through_awx
