--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -19,10 +19,10 @@
         src: /tmp/mcxptt_deploy_20f25_1145_ldo.tgz
         dest: ~/demo_directory_created_through_awx
         remote_src: yes
-###   - name: Store remote file into /tmp/
-###     fetch:
-###       src: /tmp/yum.log
-###       dest: /tmp/     
+    - name: Store remote file into /tmp/
+      fetch:
+        src: /tmp/yum.log
+        dest: /tmp/     
 ###   - name: Delete directory
 ###     file:
 ###       path: ~/demo_directory_created_through_awx
