--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -22,7 +22,7 @@
 
     - name: Copy from local /tmp/ to remote directoty
       copy:
-        src: /tmp/prova.txt
+        src: ~/tmp/prova.txt
         dest: ~/demo_directory_created_through_awx
         remote_src: no
 
