--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -22,7 +22,7 @@
 
     - name: Copy from local /tmp/ to remote directoty
       copy:
-        src: prova.txt
+        src: path=~/prova.txt mode=777
         dest: ~/demo_directory_created_through_awx
         remote_src: no
 
