--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -24,7 +24,7 @@
 
     - name: Copy from local /tmp/ to remote directoty
       copy:
-        src: base_dir/prova.txt
+        src: {{ base_dir }}/prova.txt
         dest: ~/demo_directory_created_through_awx
         remote_src: no
 
