--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -22,7 +22,7 @@
 
     - name: Copy file to another server
       become: true
-      shell: "scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null admin@{{ ServerA }}:/C:/Smart-ID-WebAutoLogin.crx ~/demo_directory_created_through_awx"
+      shell: "scp -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null admin@172.23.17.116:/C:/Smart-ID-WebAutoLogin.crx ~/demo_directory_created_through_awx"
       delegate_to: host
 
 ###    - name: Copy from local /tmp/ to remote directoty
