--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -20,11 +20,10 @@
         dest: ~/demo_directory_created_through_awx
         remote_src: yes
 
-    - name: Copy file from local Win host to remote host
-      fetch: 
-        src: ~/prova.txt
-        dest: ~/demo_directory_created_through_awx 
-        flat: yes  
+    - git:
+      repo: 'https://github.com/lucaspinacci41/MyProject/'
+      dest: ~/demo_directory_created_through_awx
+      version: release-0.22
 
 ###    - name: Copy from local /tmp/ to remote directoty
 ###      copy:
