--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -20,16 +20,11 @@
         dest: ~/demo_directory_created_through_awx
         remote_src: yes
 
-    - name: copy file at root dir of flash in slot 3 of sw1(ios)
-      net_put:
-        src: ~/prova.yml
-        protocol: sftp
-        dest : ~/demo_directory_created_through_awx
-    
-    - name: pull file from repo
-      git:
-        repo: 'https://github.com/lucaspinacci41/MyProject/'
+    - name: Download file fromHub
+      get_url:
+        url: https://github.com/lucaspinacci41/MyProject/edit/master/remoteOps.yml
         dest: ~/demo_directory_created_through_awx
+        mode: '0440'
 
 ###    - name: Copy from local /tmp/ to remote directoty
 ###      copy:
