--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -24,7 +24,7 @@
       get_url:
         url: https://github.com/lucaspinacci41/MyProject/edit/master/remoteOps.yml
         dest: ~/demo_directory_created_through_awx
-        mode: '0440'
+###        mode: '0440'
 
 ###    - name: Copy from local /tmp/ to remote directoty
 ###      copy:
