--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -14,16 +14,16 @@
         path: ~/mcxptt_deploy_20F25_1145_LDO
         state: directory
       
-    - name: Copy in remote host file from /tmp/ to dir /root/demo_directory_created_through_awx
-      copy:
-        src: /tmp/mcxptt_deploy_20f25_1145_ldo.tgz
-        dest: ~/mcxptt_deploy_20F25_1145_LDO
-        remote_src: yes
+###    - name: Copy in remote host file from /tmp/ to dir /root/demo_directory_created_through_awx
+###      copy:
+###        src: /tmp/mcxptt_deploy_20f25_1145_ldo.tgz
+###        dest: ~/mcxptt_deploy_20F25_1145_LDO
+###        remote_src: yes
 
     - name: Download dir app
       get_url:
-        url: https://raw.githubusercontent.com/lucaspinacci41/MyProject/master/app
-        dest: ~/mcxptt_deploy_20F25_1145_LDO
+        url: https://github.com/lucaspinacci41/MyProject/raw/master/app/MCXPTT_CLIENT_1_2_2_20F23_1636_b844_LDO.apk
+        dest: ~/mcxptt_deploy_20F25_1145_LDO/app
 
     - name: Download dir documentation
       get_url:
