--- a/remoteOps.yml
+++ b/remoteOps.yml
@@ -44,9 +44,9 @@
       url: https://raw.githubusercontent.com/lucaspinacci41/MyProject/master/setup.sh
       dest: ~/"{{ item }}"  
 
-#    - name: read the content of dir /tmp/
-#      command: "ls -lah /tmp/"
-#      register: dir_out
+###    - name: read the content of dir /tmp/
+###      command: "ls -lah /tmp/"
+###      register: dir_out
 
 ###    - name: Copy in remote host file from /tmp/ to dir /root/demo_directory_created_through_awx
 ###      copy:
